package v1

import (
	"context"
	desc "medblogers_base/internal/pb/medblogers_base/api/admin/doctors/speciality/v1"
)

func (i *Implementation) AddAdditionalSpeciality(ctx context.Context, req *desc.AddAdditionalSpecialityRequest) (resp *desc.AddAdditionalSpecialityResponse, err error) {
	return nil, nil
}
