package v1

import (
	"context"
	desc "medblogers_base/internal/pb/medblogers_base/api/admin/doctors/speciality/v1"
)

func (i *Implementation) CreateSpeciality(ctx context.Context, req *desc.CreateDoctorsSpecialityRequest) (resp *desc.CreateDoctorsSpecialityResponse, err error) {
	return nil, nil
}
