package v1

import (
	"context"
	desc "medblogers_base/internal/pb/medblogers_base/api/admin/doctors/speciality/v1"
)

func (i *Implementation) DeleteAdditionalSpeciality(ctx context.Context, req *desc.DeleteAdditionalSpecialityRequest) (resp *desc.DeleteAdditionalSpecialityResponse, err error) {
	return nil, nil
}
