package v1

import (
	"context"
	desc "medblogers_base/internal/pb/medblogers_base/api/admin/doctors/speciality/v1"
)

func (i *Implementation) SearchSpeciality(ctx context.Context, req *desc.SearchDoctorsSpecialityRequest) (resp *desc.SearchDoctorsSpecialityResponse, err error) {
	return nil, nil
}
